docs/en/4.1.0/api/Application.md
#Application
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;9</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mdatabaseFilePath" data-target="cMethoddatabaseFilePath" class="autouncollapse">databaseFilePath</a></li><li><a href="#mexpandDatabaseBlobFilePath" data-target="cMethodexpandDatabaseBlobFilePath" class="autouncollapse">expandDatabaseBlobFilePath</a></li><li><a href="#mminimize" data-target="cMethodminimize" class="autouncollapse">minimize</a></li><li><a href="#mmodelFolderPath" data-target="cMethodmodelFolderPath" class="autouncollapse">modelFolderPath</a></li><li><a href="#mprocessApplicationEvent" data-target="cMethodprocessApplicationEvent" class="autouncollapse">processApplicationEvent</a></li><li><a href="#mquit" data-target="cMethodquit" class="autouncollapse">quit</a></li><li><a href="#mrelativeDatabaseBlobFilePath" data-target="cMethodrelativeDatabaseBlobFilePath" class="autouncollapse">relativeDatabaseBlobFilePath</a></li><li><a href="#mrestore" data-target="cMethodrestore" class="autouncollapse">restore</a></li><li><a href="#msetApplicationNotify" data-target="cMethodsetApplicationNotify" class="autouncollapse">setApplicationNotify</a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;21</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Class Properties</i></b></a><li><a href="#pappBundleFolder" data-target="cPropertyappBundleFolder" class="autouncollapse">appBundleFolder</a></li><li><a href="#pappName" data-target="cPropertyappName" class="autouncollapse">appName</a></li><li><a href="#pappsBundleFolder" data-target="cPropertyappsBundleFolder" class="autouncollapse">appsBundleFolder</a></li><li><a href="#pbadLinkURI" data-target="cPropertybadLinkURI" class="autouncollapse">badLinkURI</a></li><li><a href="#pbundleFolder" data-target="cPropertybundleFolder" class="autouncollapse">bundleFolder</a></li><li><a href="#pconfigPath" data-target="cPropertyconfigPath" class="autouncollapse">configPath</a></li><li><a href="#pcountry" data-target="cPropertycountry" class="autouncollapse">country</a></li><li><a href="#pdatabaseBlobFolder" data-target="cPropertydatabaseBlobFolder" class="autouncollapse">databaseBlobFolder</a></li><li><a href="#pdefaultNativeMenu" data-target="cPropertydefaultNativeMenu" class="autouncollapse">defaultNativeMenu</a></li><li><a href="#pinvalidSecurityTokenStartPath" data-target="cPropertyinvalidSecurityTokenStartPath" class="autouncollapse">invalidSecurityTokenStartPath</a></li><li><a href="#plocale" data-target="cPropertylocale" class="autouncollapse">locale</a></li><li><a href="#pmodelsManifestPath" data-target="cPropertymodelsManifestPath" class="autouncollapse">modelsManifestPath</a></li><li><a href="#pnativeMenu" data-target="cPropertynativeMenu" class="autouncollapse">nativeMenu</a></li><li><a href="#ppublicFolder" data-target="cPropertypublicFolder" class="autouncollapse">publicFolder</a></li><li><a href="#psecurityTokenNotPassed" data-target="cPropertysecurityTokenNotPassed" class="autouncollapse">securityTokenNotPassed</a></li><li><a href="#psettingsPageURI" data-target="cPropertysettingsPageURI" class="autouncollapse">settingsPageURI</a></li><li><a href="#psplash" data-target="cPropertysplash" class="autouncollapse">splash</a></li><li><a href="#pstartURI" data-target="cPropertystartURI" class="autouncollapse">startURI</a></li><li><a href="#ptitle" data-target="cPropertytitle" class="autouncollapse">title</a></li><li><a href="#puserFolder" data-target="cPropertyuserFolder" class="autouncollapse">userFolder</a></li><li><a href="#pversion" data-target="cPropertyversion" class="autouncollapse">version</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;5</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Set the locale</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Get folders where items are stored</a></li><li><a href="#e2" data-target="eExample2" class="autouncollapse">Minimize your application</a></li><li><a href="#e3" data-target="eExample3" class="autouncollapse">Quit your application</a></li><li><a href="#e4" data-target="eExample4" class="autouncollapse">Restore your application</a></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">Javascript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>The Application class is used for accessing or setting application level configuration settings.</p>
<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.</p>

<pre><code>:::ruby
extensions: ["coreapi"]
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mdatabaseFilePath'/><div class=' method  js ruby android ios wp8' id='mdatabaseFilePath'><h3><strong  >databaseFilePath</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> partitionName)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mdatabaseFilePath1" data-toggle="tab">Description</a></li><li ><a href="#mdatabaseFilePath2" data-toggle="tab">Parameters</a></li><li ><a href="#mdatabaseFilePath4" data-toggle="tab">Return</a></li><li ><a href="#mdatabaseFilePath6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-databaseFilePath'><div class="tab-pane fade active in" id="mdatabaseFilePath1"><p>Path to database file by partition name. Please note that this function does not create a database file. This function only generates the file path based on the application path and partition name.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mdatabaseFilePath2"><div><p><strong>Parameters</strong></p><ul><li>partitionName : <span class='text-info'>STRING</span><p><p>Partition name.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mdatabaseFilePath3"></div><div class="tab-pane fade" id="mdatabaseFilePath4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : <p>Full path to the database file for given partition.</p>
</li></ul></div></div><div class="tab-pane fade" id="mdatabaseFilePath6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.databaseFilePath(<span class="text-info">STRING</span> partitionName)</code> </li><li>Ruby: <code>Rho::Application.databaseFilePath(<span class="text-info">STRING</span> partitionName)</code></li></ul></li></ul></div></div></div>  </div><a name ='mexpandDatabaseBlobFilePath'/><div class=' method  js ruby android ios wp8' id='mexpandDatabaseBlobFilePath'><h3><strong  >expandDatabaseBlobFilePath</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> relativePath)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mexpandDatabaseBlobFilePath1" data-toggle="tab">Description</a></li><li ><a href="#mexpandDatabaseBlobFilePath2" data-toggle="tab">Parameters</a></li><li ><a href="#mexpandDatabaseBlobFilePath4" data-toggle="tab">Return</a></li><li ><a href="#mexpandDatabaseBlobFilePath6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-expandDatabaseBlobFilePath'><div class="tab-pane fade active in" id="mexpandDatabaseBlobFilePath1"><p>Generates the absolute path to database blob file. Please note that this function does not the create database file. This function only generates the file path based on application path and partition name.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mexpandDatabaseBlobFilePath2"><div><p><strong>Parameters</strong></p><ul><li>relativePath : <span class='text-info'>STRING</span><p><p>Relative path to the blob file, as it is stored in the database.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mexpandDatabaseBlobFilePath3"></div><div class="tab-pane fade" id="mexpandDatabaseBlobFilePath4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : <p>Full path to the database blob.</p>
</li></ul></div></div><div class="tab-pane fade" id="mexpandDatabaseBlobFilePath6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.expandDatabaseBlobFilePath(<span class="text-info">STRING</span> relativePath)</code> </li><li>Ruby: <code>Rho::Application.expandDatabaseBlobFilePath(<span class="text-info">STRING</span> relativePath)</code></li></ul></li></ul></div></div></div>  </div><a name ='mminimize'/><div class=' method  js ruby' id='mminimize'><h3><strong  >minimize</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mminimize1" data-toggle="tab">Description</a></li><li ><a href="#mminimize4" data-toggle="tab">Return</a></li><li ><a href="#mminimize6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-minimize'><div class="tab-pane fade active in" id="mminimize1"><p>Minimize or move the application to background. When running in RhoSimulator this method is supported only for Windows OS.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mminimize2"></div><div class="tab-pane fade" id="mminimize3"></div><div class="tab-pane fade" id="mminimize4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mminimize6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.minimize()</code> </li><li>Ruby: <code>Rho::Application.minimize()</code></li></ul></li></ul></div></div></div>  </div><a name ='mmodelFolderPath'/><div class=' method  js ruby android ios wp8' id='mmodelFolderPath'><h3><strong  >modelFolderPath</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> name)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mmodelFolderPath1" data-toggle="tab">Description</a></li><li ><a href="#mmodelFolderPath2" data-toggle="tab">Parameters</a></li><li ><a href="#mmodelFolderPath4" data-toggle="tab">Return</a></li><li ><a href="#mmodelFolderPath6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-modelFolderPath'><div class="tab-pane fade active in" id="mmodelFolderPath1"><p>Folder of the model by name.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mmodelFolderPath2"><div><p><strong>Parameters</strong></p><ul><li>name : <span class='text-info'>STRING</span><p><p>Model name.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mmodelFolderPath3"></div><div class="tab-pane fade" id="mmodelFolderPath4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mmodelFolderPath6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.modelFolderPath(<span class="text-info">STRING</span> name)</code> </li><li>Ruby: <code>Rho::Application.modelFolderPath(<span class="text-info">STRING</span> name)</code></li></ul></li></ul></div></div></div>  </div><a name ='mprocessApplicationEvent'/><div class=' method  ruby android ios' id='mprocessApplicationEvent'><h3><strong  >processApplicationEvent</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> applicationEvent, <span class="text-info">HASH</span> eventData)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mprocessApplicationEvent1" data-toggle="tab">Description</a></li><li ><a href="#mprocessApplicationEvent2" data-toggle="tab">Parameters</a></li><li ><a href="#mprocessApplicationEvent4" data-toggle="tab">Return</a></li><li ><a href="#mprocessApplicationEvent6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-processApplicationEvent'><div class="tab-pane fade active in" id="mprocessApplicationEvent1"><p>Ruby applications must use this method for processing of the application Event. May be called from setApplicationNotify callback.This method should be called for each event. The only exception is SyncUserChanged, where you can choose your own reset database logic.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mprocessApplicationEvent2"><div><p><strong>Parameters</strong></p><ul><li>applicationEvent : <span class='text-info'>STRING</span><p><p>See setApplicationNotify for applicationEvent values.</p>
 </p></li><li>eventData : <span class='text-info'>HASH</span><p><p>This will only contain values for the <code>APP_EVENT_CONFIGCONFLICT</code> event. This event may be triggered after an application was upgraded. If your rhoconfig.txt file contains custom properties that are different then what is being provided in the application upgrade package. By default local values are kept in place but you may overwrite configuration with new values and any other steps required for your application upgrade. <code>eventData</code> will be a hash. It will look like {&ldquo;conflicting key&rdquo; : [&ldquo;new value&rdquo;,&ldquo;old value&rdquo;].. }</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mprocessApplicationEvent3"></div><div class="tab-pane fade" id="mprocessApplicationEvent4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mprocessApplicationEvent6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::Application.processApplicationEvent(<span class="text-info">STRING</span> applicationEvent, <span class="text-info">HASH</span> eventData)</code></li></ul></li></ul></div></div></div>  </div><a name ='mquit'/><div class=' method  js ruby android ios wp8' id='mquit'><h3><strong  >quit</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mquit1" data-toggle="tab">Description</a></li><li ><a href="#mquit4" data-toggle="tab">Return</a></li><li ><a href="#mquit6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-quit'><div class="tab-pane fade active in" id="mquit1"><p>Quit the application.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mquit2"></div><div class="tab-pane fade" id="mquit3"></div><div class="tab-pane fade" id="mquit4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mquit6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.quit()</code> </li><li>Ruby: <code>Rho::Application.quit()</code></li></ul></li></ul></div></div></div>  </div><a name ='mrelativeDatabaseBlobFilePath'/><div class=' method  js ruby android ios wp8' id='mrelativeDatabaseBlobFilePath'><h3><strong  >relativeDatabaseBlobFilePath</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> absolutePath)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mrelativeDatabaseBlobFilePath1" data-toggle="tab">Description</a></li><li ><a href="#mrelativeDatabaseBlobFilePath2" data-toggle="tab">Parameters</a></li><li ><a href="#mrelativeDatabaseBlobFilePath4" data-toggle="tab">Return</a></li><li ><a href="#mrelativeDatabaseBlobFilePath6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-relativeDatabaseBlobFilePath'><div class="tab-pane fade active in" id="mrelativeDatabaseBlobFilePath1"><p>Generates the relative path to database blob file. Please note that this function does not create a database file. This function only generates the file path based on the application path and partition name.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mrelativeDatabaseBlobFilePath2"><div><p><strong>Parameters</strong></p><ul><li>absolutePath : <span class='text-info'>STRING</span><p><p>Absolute path to database blob file.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mrelativeDatabaseBlobFilePath3"></div><div class="tab-pane fade" id="mrelativeDatabaseBlobFilePath4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mrelativeDatabaseBlobFilePath6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.relativeDatabaseBlobFilePath(<span class="text-info">STRING</span> absolutePath)</code> </li><li>Ruby: <code>Rho::Application.relativeDatabaseBlobFilePath(<span class="text-info">STRING</span> absolutePath)</code></li></ul></li></ul></div></div></div>  </div><a name ='mrestore'/><div class=' method  js ruby' id='mrestore'><h3><strong  >restore</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mrestore1" data-toggle="tab">Description</a></li><li ><a href="#mrestore4" data-toggle="tab">Return</a></li><li ><a href="#mrestore6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-restore'><div class="tab-pane fade active in" id="mrestore1"><p>Restores the application to be in the foreground. When running in RhoSimulator the method is supported only for windows OS.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mrestore2"></div><div class="tab-pane fade" id="mrestore3"></div><div class="tab-pane fade" id="mrestore4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mrestore6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.restore()</code> </li><li>Ruby: <code>Rho::Application.restore()</code></li></ul></li></ul></div></div></div>  </div><a name ='msetApplicationNotify'/><div class=' method  js ruby android ios' id='msetApplicationNotify'><h3><strong  >setApplicationNotify</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetApplicationNotify1" data-toggle="tab">Description</a></li><li ><a href="#msetApplicationNotify2" data-toggle="tab">Parameters</a></li><li ><a href="#msetApplicationNotify3" data-toggle="tab">Callback</a></li><li ><a href="#msetApplicationNotify4" data-toggle="tab">Return</a></li><li ><a href="#msetApplicationNotify6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setApplicationNotify'><div class="tab-pane fade active in" id="msetApplicationNotify1"><p>This method allows your application to register for application specific events like application activation/deactivation, UI creation/destruction as well as others. Check the Callback tab for details.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="msetApplicationNotify2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="msetApplicationNotify3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>applicationEvent : <span class='text-info'>STRING</span><p> </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>Constant: Rho.Application.APP_EVENT_ACTIVATED (For Ruby use "::" instead of ".")<br/> String:Activated</dt><dd><p>The application has been activated.</p>
</dt><dt>Constant: Rho.Application.APP_EVENT_DEACTIVATED (For Ruby use "::" instead of ".")<br/> String:Deactivated</dt><dd><p>The application has been deactivated.</p>
</dt><dt>Constant: Rho.Application.APP_EVENT_UICREATED (For Ruby use "::" instead of ".")<br/> String:UICreated</dt><dd><p>Generated before the start page is loaded. There are no means to set callback and catch event in javascript. Ruby Application class descendant can to set callback and process this event.</p>
</dt><dt>Constant: Rho.Application.APP_EVENT_UIDESTROYED (For Ruby use "::" instead of ".")<br/> String:UIDestroyed</dt><dd><p>This event is triggered when the application is closing and the UI has been cleared.</p>
</dt><dt>Constant: Rho.Application.APP_EVENT_SCREEN_OFF (For Ruby use "::" instead of ".")<br/> String:ScreenOff</dt><dd><p>Device screen was turned off when power button was pressed or due to idle timeout. NB: On iOS application is also deactivated (APP_EVENT_DEACTIVATED is fired). On Android the application is not deactivated.Not supported on Windows CE.</p>
 Platforms: <p>Android, iOS, WM</p>
</dt><dt>Constant: Rho.Application.APP_EVENT_SCREEN_ON (For Ruby use "::" instead of ".")<br/> String:ScreenOn</dt><dd><p>Device screen was turned on and unlocked.Not supported on Windows CE.</p>
 Platforms: <p>Android, iOS, WM</p>
</dt><dt>Constant: Rho.Application.APP_EVENT_SYNCUSERCHANGED (For Ruby use "::" instead of ".")<br/> String:SyncUserChanged</dt><dd><p>Event when the current RhoConnect user has changed. This is available under Ruby Only.</p>
</dt><dt>Constant: Rho.Application.APP_EVENT_CONFIGCONFLICT (For Ruby use "::" instead of ".")<br/> String:ConfigConflict</dt><dd><p>This is available under Ruby Only.</p>
</dt><dt>Constant: Rho.Application.APP_EVENT_DBMIGRATESOURCE (For Ruby use "::" instead of ".")<br/> String:DBMigrateSource</dt><dd><p>This is available under Ruby Only.</p>
</dt></dl></li><li>eventData : <span class='text-info'>HASH</span><p><p>This will only contain values for the <code>APP_EVENT_CONFIGCONFLICT</code> event. This event may be triggered after an application was upgraded. If your rhoconfig.txt file contains custom properties that are different then what is being provided in the application upgrade package. By default local values are kept in place but you may overwrite configuration with new values and any other steps required for your application upgrade. <code>eventData</code> will be a hash. It will look like {&ldquo;conflicting key&rdquo; : [&ldquo;new value&rdquo;,&ldquo;old value&rdquo;].. }</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="msetApplicationNotify4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="msetApplicationNotify6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.setApplicationNotify(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Application.setApplicationNotify(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>

<a name='pappBundleFolder'></a><div class=' method  js ruby android ios wp8' id='pappBundleFolder'><h3><strong  >appBundleFolder</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pappBundleFolder1" data-toggle="tab">Description</a></li><li ><a href="#pappBundleFolder6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-appBundleFolder'><div class="tab-pane fade active in" id="pappBundleFolder1"><p>Path to apps/app folder inside the application bundle.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pappBundleFolder2"></div><div class="tab-pane fade" id="pappBundleFolder5"></div><div class="tab-pane fade" id="pappBundleFolder6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.appBundleFolder</code> </li><li>Ruby: <code>Rho::Application.appBundleFolder</code></li></ul></li></ul></div></div></div>  </div><a name='pappName'></a><div class=' method  js ruby android ios wp8' id='pappName'><h3><strong  >appName</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pappName1" data-toggle="tab">Description</a></li><li ><a href="#pappName6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-appName'><div class="tab-pane fade active in" id="pappName1"><p>Application name.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pappName2"></div><div class="tab-pane fade" id="pappName5"></div><div class="tab-pane fade" id="pappName6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.appName</code> </li><li>Ruby: <code>Rho::Application.appName</code></li></ul></li></ul></div></div></div>  </div><a name='pappsBundleFolder'></a><div class=' method  js ruby android ios wp8' id='pappsBundleFolder'><h3><strong  >appsBundleFolder</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pappsBundleFolder1" data-toggle="tab">Description</a></li><li ><a href="#pappsBundleFolder6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-appsBundleFolder'><div class="tab-pane fade active in" id="pappsBundleFolder1"><p>Path to apps folder inside the application bundle.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pappsBundleFolder2"></div><div class="tab-pane fade" id="pappsBundleFolder5"></div><div class="tab-pane fade" id="pappsBundleFolder6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.appsBundleFolder</code> </li><li>Ruby: <code>Rho::Application.appsBundleFolder</code></li></ul></li></ul></div></div></div>  </div><a name='pbadLinkURI'></a><div class=' method  js ruby' id='pbadLinkURI'><h3><strong  >badLinkURI</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pbadLinkURI1" data-toggle="tab">Description</a></li><li ><a href="#pbadLinkURI6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-badLinkURI'><div class="tab-pane fade active in" id="pbadLinkURI1"><p>Bad link URI to navigate in browser. This is defined in config.xml: Navigation\BadLinkURI.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pbadLinkURI2"></div><div class="tab-pane fade" id="pbadLinkURI5"></div><div class="tab-pane fade" id="pbadLinkURI6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.badLinkURI</code> </li><li>Ruby: <code>Rho::Application.badLinkURI</code></li></ul></li></ul></div></div></div>  </div><a name='pbundleFolder'></a><div class=' method  js ruby android ios wp8' id='pbundleFolder'><h3><strong  >bundleFolder</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pbundleFolder1" data-toggle="tab">Description</a></li><li ><a href="#pbundleFolder6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-bundleFolder'><div class="tab-pane fade active in" id="pbundleFolder1"><p>Path to application bundle folder.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pbundleFolder2"></div><div class="tab-pane fade" id="pbundleFolder5"></div><div class="tab-pane fade" id="pbundleFolder6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.bundleFolder</code> </li><li>Ruby: <code>Rho::Application.bundleFolder</code></li></ul></li></ul></div></div></div>  </div><a name='pconfigPath'></a><div class=' method  js ruby android ios wp8' id='pconfigPath'><h3><strong  >configPath</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pconfigPath1" data-toggle="tab">Description</a></li><li ><a href="#pconfigPath6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-configPath'><div class="tab-pane fade active in" id="pconfigPath1"><p>Path to the configuration file.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pconfigPath2"></div><div class="tab-pane fade" id="pconfigPath5"></div><div class="tab-pane fade" id="pconfigPath6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.configPath</code> </li><li>Ruby: <code>Rho::Application.configPath</code></li></ul></li></ul></div></div></div>  </div><a name='pcountry'></a><div class=' method  ruby android ios wp8' id='pcountry'><h3><strong  >country</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pcountry1" data-toggle="tab">Description</a></li><li ><a href="#pcountry6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-country'><div class="tab-pane fade active in" id="pcountry1"><p>Current application country code.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pcountry2"></div><div class="tab-pane fade" id="pcountry5"></div><div class="tab-pane fade" id="pcountry6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::Application.country</code></li></ul></li></ul></div></div></div>  </div><a name='pdatabaseBlobFolder'></a><div class=' method  js ruby android ios wp8' id='pdatabaseBlobFolder'><h3><strong  >databaseBlobFolder</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pdatabaseBlobFolder1" data-toggle="tab">Description</a></li><li ><a href="#pdatabaseBlobFolder6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-databaseBlobFolder'><div class="tab-pane fade active in" id="pdatabaseBlobFolder1"><p>Path to folder where the database blob files are stored. Blobs are usually images or binary files. In the ORM Model you would specify that the attribute is of type blob Ex. When capturing an image, the actual file is saved in the databaseBlobFolder.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pdatabaseBlobFolder2"></div><div class="tab-pane fade" id="pdatabaseBlobFolder5"></div><div class="tab-pane fade" id="pdatabaseBlobFolder6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.databaseBlobFolder</code> </li><li>Ruby: <code>Rho::Application.databaseBlobFolder</code></li></ul></li></ul></div></div></div>  </div><a name='pdefaultNativeMenu'></a><div class=' method  js ruby android wp8' id='pdefaultNativeMenu'><h3><strong  >defaultNativeMenu</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>ARRAY</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pdefaultNativeMenu1" data-toggle="tab">Description</a></li><li ><a href="#pdefaultNativeMenu2" data-toggle="tab">Params</a></li><li ><a href="#pdefaultNativeMenu6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-defaultNativeMenu'><div class="tab-pane fade active in" id="pdefaultNativeMenu1"><p>Native Menu items.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pdefaultNativeMenu2"><li><i>Object<i> : <span class='text-info'>HASH</span><p><p>Same values as nativeMenu.</p>
 </p></li></div><div class="tab-pane fade" id="pdefaultNativeMenu5"></div><div class="tab-pane fade" id="pdefaultNativeMenu6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.defaultNativeMenu</code> </li><li>Ruby: <code>Rho::Application.defaultNativeMenu</code></li></ul></li></ul></div></div></div>  </div><a name='pinvalidSecurityTokenStartPath'></a><div class=' method  js ruby android ios' id='pinvalidSecurityTokenStartPath'><h3><strong  >invalidSecurityTokenStartPath</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pinvalidSecurityTokenStartPath1" data-toggle="tab">Description</a></li><li ><a href="#pinvalidSecurityTokenStartPath6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-invalidSecurityTokenStartPath'><div class="tab-pane fade active in" id="pinvalidSecurityTokenStartPath1"><p>Page to navigate to in case of check of SecurityToken failed. Can be set in rhoconfig.txt: invalid_security_token_start_path;</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pinvalidSecurityTokenStartPath2"></div><div class="tab-pane fade" id="pinvalidSecurityTokenStartPath5"></div><div class="tab-pane fade" id="pinvalidSecurityTokenStartPath6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.invalidSecurityTokenStartPath</code> </li><li>Ruby: <code>Rho::Application.invalidSecurityTokenStartPath</code></li></ul></li></ul></div></div></div>  </div><a name='plocale'></a><div class=' method  ruby android ios wp8' id='plocale'><h3><strong  >locale</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#plocale1" data-toggle="tab">Description</a></li><li ><a href="#plocale6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-locale'><div class="tab-pane fade active in" id="plocale1"><p>Current application locale.Like &lsquo;en&rsquo;, &lsquo;ru&rsquo; etc.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="plocale2"></div><div class="tab-pane fade" id="plocale5"></div><div class="tab-pane fade" id="plocale6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Ruby: <code>Rho::Application.locale</code></li></ul></li></ul></div></div></div>  </div><a name='pmodelsManifestPath'></a><div class=' method  js ruby android ios wp8' id='pmodelsManifestPath'><h3><strong  >modelsManifestPath</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pmodelsManifestPath1" data-toggle="tab">Description</a></li><li ><a href="#pmodelsManifestPath6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-modelsManifestPath'><div class="tab-pane fade active in" id="pmodelsManifestPath1"><p>Path to file with the model list.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pmodelsManifestPath2"></div><div class="tab-pane fade" id="pmodelsManifestPath5"></div><div class="tab-pane fade" id="pmodelsManifestPath6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.modelsManifestPath</code> </li><li>Ruby: <code>Rho::Application.modelsManifestPath</code></li></ul></li></ul></div></div></div>  </div><a name='pnativeMenu'></a><div class=' method  js ruby android wp8' id='pnativeMenu'><h3><strong  >nativeMenu</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>ARRAY</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pnativeMenu1" data-toggle="tab">Description</a></li><li ><a href="#pnativeMenu2" data-toggle="tab">Params</a></li><li ><a href="#pnativeMenu6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-nativeMenu'><div class="tab-pane fade active in" id="pnativeMenu1"><p>Native Menu items.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pnativeMenu2"><li><i>Object<i> : <span class='text-info'>HASH</span><p> </p></li><ul><li>label : <span class='text-info'>STRING</span><p><p>Visible label.</p>
 </p></li><li>action : <span class='text-info'>STRING</span><p><p>URL to page which will be loaded into tab. It may be path to Ruby controller action; i.e. &lsquo;/app/Account&rsquo; would load the Account index action. For ruby callback use &lsquo;callback:/app/Account&rsquo; Or JavaScript method to call: &lsquo;javascript: methodOnTab();&rsquo;. Or path to html page to load.</p>
 </p></li></ul></div><div class="tab-pane fade" id="pnativeMenu5"></div><div class="tab-pane fade" id="pnativeMenu6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.nativeMenu</code> </li><li>Ruby: <code>Rho::Application.nativeMenu</code></li></ul></li></ul></div></div></div>  </div><a name='ppublicFolder'></a><div class=' method  js ruby android ios wp8' id='ppublicFolder'><h3><strong  >publicFolder</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ppublicFolder1" data-toggle="tab">Description</a></li><li ><a href="#ppublicFolder6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-publicFolder'><div class="tab-pane fade active in" id="ppublicFolder1"><p>Path to the application&rsquo;s public folder.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="ppublicFolder2"></div><div class="tab-pane fade" id="ppublicFolder5"></div><div class="tab-pane fade" id="ppublicFolder6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.publicFolder</code> </li><li>Ruby: <code>Rho::Application.publicFolder</code></li></ul></li></ul></div></div></div>  </div><a name='psecurityTokenNotPassed'></a><div class=' method  js ruby android ios' id='psecurityTokenNotPassed'><h3><strong  >securityTokenNotPassed</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#psecurityTokenNotPassed1" data-toggle="tab">Description</a></li><li ><a href="#psecurityTokenNotPassed6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-securityTokenNotPassed'><div class="tab-pane fade active in" id="psecurityTokenNotPassed1"><p>Is the security token check was failed. Security token can be set in build.yml: security_token. Same security token should be passed as command line parameter &lsquo;-security_token=token_value&rsquo; to application. If security token check failed : if this page exist then application navigate to it, otherwise application will exit.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="psecurityTokenNotPassed2"></div><div class="tab-pane fade" id="psecurityTokenNotPassed5"></div><div class="tab-pane fade" id="psecurityTokenNotPassed6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.securityTokenNotPassed</code> </li><li>Ruby: <code>Rho::Application.securityTokenNotPassed</code></li></ul></li></ul></div></div></div>  </div><a name='psettingsPageURI'></a><div class=' method  js ruby android ios wp8' id='psettingsPageURI'><h3><strong  >settingsPageURI</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#psettingsPageURI1" data-toggle="tab">Description</a></li><li ><a href="#psettingsPageURI6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-settingsPageURI'><div class="tab-pane fade active in" id="psettingsPageURI1"><p>Settings page URI. Will be used when Options menu or toolbar item is chosen by user.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="psettingsPageURI2"></div><div class="tab-pane fade" id="psettingsPageURI5"></div><div class="tab-pane fade" id="psettingsPageURI6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.settingsPageURI</code> </li><li>Ruby: <code>Rho::Application.settingsPageURI</code></li></ul></li></ul></div></div></div>  </div><a name='psplash'></a><div class=' method  js ruby android ios wp8' id='psplash'><h3><strong  >splash</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#psplash1" data-toggle="tab">Description</a></li><li ><a href="#psplash6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-splash'><div class="tab-pane fade active in" id="psplash1"><p>Splash screen image display options. This a string with several parameters divided by &lsquo;;&rsquo;: delay=5;center;hcenter;vcenter;vzoom;hzoom;zoom.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="psplash2"></div><div class="tab-pane fade" id="psplash5"></div><div class="tab-pane fade" id="psplash6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.splash</code> </li><li>Ruby: <code>Rho::Application.splash</code></li></ul></li></ul></div></div></div>  </div><a name='pstartURI'></a><div class=' method  js ruby android ios wp8' id='pstartURI'><h3><strong  >startURI</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pstartURI1" data-toggle="tab">Description</a></li><li ><a href="#pstartURI6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-startURI'><div class="tab-pane fade active in" id="pstartURI1"><p>Startup page for your application.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pstartURI2"></div><div class="tab-pane fade" id="pstartURI5"></div><div class="tab-pane fade" id="pstartURI6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.startURI</code> </li><li>Ruby: <code>Rho::Application.startURI</code></li></ul></li></ul></div></div></div>  </div><a name='ptitle'></a><div class=' method  js ruby' id='ptitle'><h3><strong  >title</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#ptitle1" data-toggle="tab">Description</a></li><li ><a href="#ptitle6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-title'><div class="tab-pane fade active in" id="ptitle1"><p>Define Window caption text. If missed &ndash; caption from page used. Not supported on Windows CE devices.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="ptitle2"></div><div class="tab-pane fade" id="ptitle5"></div><div class="tab-pane fade" id="ptitle6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.title</code> </li><li>Ruby: <code>Rho::Application.title</code></li></ul></li></ul></div></div></div>  </div><a name='puserFolder'></a><div class=' method  js ruby android ios wp8' id='puserFolder'><h3><strong  >userFolder</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#puserFolder1" data-toggle="tab">Description</a></li><li ><a href="#puserFolder6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-userFolder'><div class="tab-pane fade active in" id="puserFolder1"><p>Path to folder where the application can write files and create subfolders.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="puserFolder2"></div><div class="tab-pane fade" id="puserFolder5"></div><div class="tab-pane fade" id="puserFolder6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.userFolder</code> </li><li>Ruby: <code>Rho::Application.userFolder</code></li></ul></li></ul></div></div></div>  </div><a name='pversion'></a><div class=' method  js ruby android ios wp8' id='pversion'><h3><strong  >version</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span> <span class='label'>Read Only</span> </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pversion1" data-toggle="tab">Description</a></li><li ><a href="#pversion6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-version'><div class="tab-pane fade active in" id="pversion1"><p>Version from build time configuration file (build.yml).</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pversion2"></div><div class="tab-pane fade" id="pversion5"></div><div class="tab-pane fade" id="pversion6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Application.version</code> </li><li>Ruby: <code>Rho::Application.version</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Set the locale</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>If your application is internationalized, you may want to set the locale depending on the user&rsquo;s preference.</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0JS' data-toggle='tab'>Javascript</a></li><li ><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript

           
Rho.Application.setLocale('en')
var current_locale = Rho.Application.locale();
alert(current_locale)
                   
                 </code></pre></div><div class='tab-pane' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
Rho::Application.setLocale('en')
current_locale = Rho::Application.locale
Alert.show_popup(current_locale)
                   
                 </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Get folders where items are stored</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>There are times where you need access to files bundled with your application, or to write files to a safe folder. These examples show how to retrieve each of the several important folders available.</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>Javascript</a></li><li ><a href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

           
     // Get and show the various app folders
     var appFolder = Rho.Application.appBundleFolder;
     var appsBundleFolder = Rho.Application.appsBundleFolder;
     var databaseBlobFolder = Rho.Application.databaseBlobFolder;
     var publicFolder = Rho.Application.publicFolder;
     var userFolder = Rho.Application.userFolder;
     
     var message = "App bundle folder: "+appFolder+"\n"+
     "Apps bundle folder: "+appsBundleFolder+"\n"+ 
     "Database blob folder: "+databaseBlobFolder+"\n"+ 
     "Public folder: "+publicFolder+"\n"+ 
     "User folder: "+userFolder;
     
     alert(message);
                   
                 </code></pre></div><div class='tab-pane' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
# Get and show the various app folders
appFolder = Rho::Application.appBundleFolder
appsBundleFolder = Rho::Application.appsBundleFolder
databaseBlobFolder = Rho::Application.databaseBlobFolder
publicFolder = Rho::Application.publicFolder
userFolder = Rho::Application.userFolder

message = "App bundle folder: "+appFolder+"\n"+
"Apps bundle folder: "+appsBundleFolder+"\n"+ 
"Database blob folder: "+databaseBlobFolder+"\n"+ 
"Public folder: "+publicFolder+"\n"+ 
"User folder: "+userFolder
    
Alert.show_popup(message)
                   
                 </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>Minimize your application</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">
<p>This will minimize your application.</p>
<ul class='nav nav-tabs' id='exI2-S0Tab'><li class='active'><a href='#exI2-S0JS' data-toggle='tab'>Javascript</a></li><li ><a href='#exI2-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S0JS'><pre class='CodeRay'><code>:::javascript

Rho.Application.minimize();
                 </code></pre></div><div class='tab-pane' id='exI2-S0RUBY'><pre class='CodeRay'><code>:::ruby

Rho::Application.minimize
                 </code></pre></div></div>  </div></div></div></div><a name='e3'></a><div class=' example' id='e3'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample3"><strong>Quit your application</strong></div><div id="cExample3" class="accordion-body">  <div class="accordion-inner">
<p>This will exit your application.</p>
<ul class='nav nav-tabs' id='exI3-S0Tab'><li class='active'><a href='#exI3-S0JS' data-toggle='tab'>Javascript</a></li><li ><a href='#exI3-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI3-S0JS'><pre class='CodeRay'><code>:::javascript

Rho.Application.quit();
                 </code></pre></div><div class='tab-pane' id='exI3-S0RUBY'><pre class='CodeRay'><code>:::ruby

Rho::Application.quit
                 </code></pre></div></div>  </div></div></div></div><a name='e4'></a><div class=' example' id='e4'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample4"><strong>Restore your application</strong></div><div id="cExample4" class="accordion-body">  <div class="accordion-inner">
<p>This will restore you application.</p>
<ul class='nav nav-tabs' id='exI4-S0Tab'><li class='active'><a href='#exI4-S0JS' data-toggle='tab'>Javascript</a></li><li ><a href='#exI4-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI4-S0JS'><pre class='CodeRay'><code>:::javascript

Rho.Application.restore();
                 </code></pre></div><div class='tab-pane' id='exI4-S0RUBY'><pre class='CodeRay'><code>:::ruby

Rho::Application.restore
                 </code></pre></div></div>  </div></div></div></div></div>